[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fonts/Animated.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Shaders/Room.shader" type="Shader" id=2]
[ext_resource path="res://Scenes/Rooms/ReactorRoom.gd" type="Script" id=3]
[ext_resource path="res://Sprites/arrow-hover.png" type="Texture" id=4]
[ext_resource path="res://Sprites/arrow.png" type="Texture" id=5]
[ext_resource path="res://Sprites/arrow-active.png" type="Texture" id=6]
[ext_resource path="res://Sprites/arrow-disabled.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Erik/Reactor1.png" type="Texture" id=8]
[ext_resource path="res://UIElements/ProgressBar.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sprites/Erik/Reactor2.png" type="Texture" id=11]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/darkness = 1.0
shader_param/col_mul = Plane( 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 335.607, 257.453 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 333.771, 5.07147 )

[sub_resource type="DynamicFont" id=5]
size = 52
use_filter = true
font_data = ExtResource( 1 )

[node name="Room" type="Area2D" groups=[
"rooms",
]]
material = SubResource( 1 )
script = ExtResource( 3 )
type = 2
colour_cold = Color( 0.329412, 0.592157, 0.603922, 1 )
colour_hot = Color( 0.662745, 0.180392, 0.180392, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0.53, 0 )
scale = Vector2( 4, 4 )
frames = SubResource( 3 )
playing = true

[node name="Ground" type="RigidBody2D" parent="."]
position = Vector2( 0, 163.318 )
mode = 1

[node name="GroundCollider" type="CollisionShape2D" parent="Ground"]
position = Vector2( 0, 87.0338 )
shape = SubResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -265.887
margin_top = -305.801
margin_right = -88.8871
margin_bottom = -193.801
mouse_filter = 2
custom_fonts/normal_font = SubResource( 5 )
text = "Reactor
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonUp" type="TextureButton" parent="."]
margin_left = 105.875
margin_top = -115.613
margin_right = 137.875
margin_bottom = -79.6134
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDown" type="TextureButton" parent="."]
margin_left = 170.522
margin_top = 27.3389
margin_right = 202.522
margin_bottom = 63.3389
rect_rotation = 180.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" parent="." instance=ExtResource( 10 )]
margin_left = -312.661
margin_top = -95.2379
margin_right = -240.661
margin_bottom = 22.7621
fill_mode = 3
[connection signal="pressed" from="ButtonUp" to="." method="_on_ButtonUp_pressed"]
[connection signal="pressed" from="ButtonDown" to="." method="_on_ButtonDown_pressed"]
